--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "react-ui-demo",
+  "name": "@efox/emp-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.8.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "yarn client:dev ",
+    "build": "yarn client:build",
+    "client:dev": "react-app-rewired start",
+    "client:build": "react-app-rewired build",
+    "server:dev": "node ./server/index.js",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -34,5 +39,39 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@efox/eslint-config-react-prittier-ts": "^1.2.3",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "apollo-server-express": "^2.19.0",
+    "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
+    "commitlint": "^11.0.0",
+    "customize-cra": "^1.0.0",
+    "deepmerge": "^4.2.2",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
+    "fs-extra": "^9.0.1",
+    "graphql-subscriptions": "^1.1.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
+    "lowdb": "^1.0.0",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
+    "react-app-rewired": "^2.1.6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx,d.ts}": "eslint --fix"
   }
 }
