--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "files": [
     "dist",
-    "server",
-    "public"
+    "server"
   ],
   "scripts": {
     "dev": "yarn client:dev",
@@ -47,9 +46,11 @@
     "lint-staged": "^10.5.2",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
+    "module-to-cdn": "^3.1.5",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
