--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "build": "yarn client:build && yarn server:build",
     "client:dev": "cross-env NODE_ENV=development npx react-app-rewired start",
     "client:build": "cross-env NODE_ENV=production npx react-app-rewired build",
-    "server:dev": "cross-env NODE_ENV=development node ./server-entry.js",
+    "server": "cross-env NODE_ENV=development node ./server-entry.js",
     "server:build": "cross-env NODE_ENV=production",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
     "fs-extra": "^9.0.1",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "node-sass": "4.14.1",
+    "typescript": "^4.1.2",
+    "webpack-bundle-analyzer": "^4.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
