--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lowdb": "^1.0.0"
   },
   "dependencies": {
+    "antd": "^4.9.1",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
