--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "emp build",
     "build:ts": "emp build -t",
     "build:lab": "emp build --env lab",
-    "tss": "emp tss http://localhost:8001/index.d.ts -n @emp-react-base.d.ts",
+    "tss": "emp tss https://emp-antd-base.yy.com/index.d.ts -n @emp-react-base.d.ts",
     "start": "emp serve",
     "stat": "emp build --analyze",
     "server": "cross-env NODE_ENV=development node ./server-entry.js",
