--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "stat": "emp build --analyze",
     "server": "cross-env NODE_ENV=development node ./server-entry.js",
     "server:build": "cross-env NODE_ENV=production",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "devDependencies": {
-    "@efox/emp-cli": "^1.1.19",
-    "@efox/emp-tsconfig": "^1.0.5",
+    "@efox/emp-cli": "^1.6.1",
+    "@efox/emp-esbuild": "^1.0.1",
+    "@efox/emp-tsconfig": "^1.1.3",
     "@efox/eslint-config-react-prittier-ts": "^1.1.0",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
