--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "@emp/react-project",
+  "name": "@efox/emp-gui",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/index.js",
   "license": "MIT",
   "private": true,
+  "files": [
+    "dist",
+    "server"
+  ],
   "scripts": {
     "dev": "emp dev",
     "dev:hot": "emp dev --hot",
@@ -14,7 +18,6 @@
     "start": "emp serve",
     "stat": "emp build --analyze",
     "server": "cross-env NODE_ENV=development node ./server-entry.js",
-    "server:build": "cross-env NODE_ENV=production",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx --fix"
   },
   "devDependencies": {
