--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@efox/emp-cli": "^1.6.1",
-    "@efox/emp-esbuild": "^1.0.1",
+    "@efox/emp-esbuild": "^1.0.2",
     "@efox/emp-tsconfig": "^1.1.3",
     "@efox/eslint-config-react-prittier-ts": "^1.1.0",
     "@types/react": "^16.9.55",
@@ -31,18 +31,20 @@
     "axios": "^0.21.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "express-history-api-fallback": "^2.2.1",
     "fs-extra": "^9.0.1",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "module-to-cdn": "^3.1.5",
+    "react-hot-loader": "^4.13.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "antd": "^4.9.1",
     "git-promise": "^1.0.0",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "sideEffects": false
 }
