--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@types/marked": "^1.2.1",
     "antd": "^4.9.1",
     "git-promise": "^1.0.0",
+    "highlight.js": "^10.5.0",
+    "marked": "^1.2.7",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
