--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "marked": "^1.2.7",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
