--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@efox/emp-gui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "server/index.js",
   "license": "MIT",
   "files": [
@@ -24,30 +24,30 @@
     "@efox/emp-esbuild": "^1.0.2",
     "@efox/emp-tsconfig": "^1.1.3",
     "@efox/eslint-config-react-prittier-ts": "^1.2.3",
+    "@types/marked": "^1.2.1",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "axios": "^0.21.0",
     "cross-env": "^7.0.2",
-    "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
-    "lowdb": "^1.0.0",
-    "module-to-cdn": "^3.1.5",
-    "react-hot-loader": "^4.13.0"
+    "raw-loader": "^4.0.2"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
-    "@types/marked": "^1.2.1",
     "antd": "^4.9.1",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "git-promise": "^1.0.0",
     "highlight.js": "^10.5.0",
+    "lowdb": "^1.0.0",
     "marked": "^1.2.7",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
-    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "sideEffects": false
 }
