--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "marked": "^1.2.7",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
